# prg-exercise-12

./: cviceni_12_matplotlib.ipynb  cviceni_12_numpy.ipynb  cviceni_12_segmentace.ipynb  cviceni_12_uvod.ipynb  novy.ipynb  pyproject.toml
